--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^4.4.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
